# MT5-Python-Trading

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backtest/: main.py
backtest/strategies/: cross_over.py
backtest/utils/: data_loader.py
mt5_trading/: logging_config.py
mt5_trading/adapters/: __init__.py  data.py  strategy.py  trader.py
mt5_trading/domain/: __init__.py  signal.py  trader.py
mt5_trading/domain/data_sources/: mt5_data.py
mt5_trading/domain/strategies/: cross_over_strategy.py
mt5_trading/robot/: cross_over_robot.py
src/: classes.py  interface.py  robot.py
